--- a/style.css
+++ b/style.css
@@ -4,3 +4,19 @@
     text-transform: uppercase;
     color: cadetblue;
 }
+.container{
+    width: 300px;
+    height: 500px;
+    font-family: fantasy;
+}
+body{
+    background: rgb(2,0,36);
+background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
+}
+.btn_background{
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
+
+}
+p{
+    font-weight: bold;
+}
